--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -46,12 +46,14 @@
     "date-fns-tz": "^2.0.0",
     "express": "4.18.2",
     "reflect-metadata": "^0.1.13",
+    "request-ip": "^3.3.0",
     "rxjs": "^7.8.0",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/express-serve-static-core": "^4.17.41",
+    "@types/request-ip": "^0.0.41",
     "@types/supertest": "^2.0.16",
     "typescript": "^5.3.2"
   }
