Work on data export upload to bucket

--- a/.env.local.example
+++ b/.env.local.example
@@ -2,3 +2,4 @@
 # URLs
 POSTGRESQL_URL=postgresql://user:password@localhost:5432/database?schema=public
 REDIS_URL=redis://localhost:6379
+USER_DATA_EXPORTS_BUCKET_URL=http://user:password@localhost:9000/default
