--- a/.env
+++ b/.env
@@ -23,3 +23,4 @@ LOGGER_LEVEL=trace
 POSTGRESQL_URL=postgresql://user:password@postgres:5432/database?schema=public
 REDIS_URL=redis://redis:6379
 SMTP_URL=smtp://user:password@smtp:587
+USER_DATA_EXPORTS_BUCKET_URL=http://user:password@minio:9000/default
