--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -48,6 +48,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "18.2.0",
+    "sonner": "^1.3.1",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
