--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "database:generate-migration": "cd ./packages/database-core && pnpm scripts:generate-migration && cd ../.. && pnpm format",
     "database:update-metadata": "cd ./packages/database-core && pnpm scripts:update-metadata",
     "dev": "cross-env NODE_ENV=development turbo dev --no-daemon --concurrency=50",
+    "dev:e2e": "cross-env NODE_ENV=test turbo dev:e2e --no-daemon --concurrency=1",
     "e2e": "cross-env NODE_ENV=test turbo e2e --no-daemon --concurrency=1",
-    "e2e:watch": "cross-env NODE_ENV=test turbo e2e:watch --no-daemon --concurrency=1",
     "format": "prettier --write --no-error-on-unmatched-pattern \"./{apps,packages}/**/*.{ts,tsx}\" \"./**/*.json\"",
     "format:check": "prettier --check --no-error-on-unmatched-pattern \"./{apps,packages}/**/*.{ts,tsx}\" \"./**/*.json\"",
     "lint": "turbo lint --no-daemon",
