--- a/apps/web-e2e/package.json
+++ b/apps/web-e2e/package.json
@@ -5,8 +5,8 @@
     "clean": "pnpm dlx rimraf --glob node_modules --glob .turbo --glob dist",
     "cypress:open": "pnpm exec cypress open",
     "cypress:run": "pnpm exec cypress run",
+    "dev:e2e": "start-server-and-test servers:start \":4200|:3636\" cypress:open",
     "e2e": "start-server-and-test servers:start \":4200|:3636\" cypress:run",
-    "e2e:watch": "start-server-and-test servers:start \":4200|:3636\" cypress:open",
     "lint": "eslint .",
     "servers:start": "cd ../../ && pnpm build && pnpm cli database:reload && concurrently --kill-others \"cd ./apps/web && pnpm serve\" \"cd ./apps/api && pnpm serve\""
   },
