--- a/turbo.json
+++ b/turbo.json
@@ -26,7 +26,7 @@
     "e2e": {
       "dependsOn": ["build"]
     },
-    "e2e:watch": {
+    "dev:e2e": {
       "dependsOn": ["build"],
       "cache": false
     }
