--- a/packages/web-ui-editor/package.json
+++ b/packages/web-ui-editor/package.json
@@ -35,46 +35,47 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toolbar": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@udecode/plate-alignment": "^28.0.0",
-    "@udecode/plate-autoformat": "^28.0.0",
-    "@udecode/plate-basic-marks": "^28.0.0",
-    "@udecode/plate-block-quote": "^28.0.0",
-    "@udecode/plate-break": "^28.0.0",
-    "@udecode/plate-caption": "^28.0.0",
-    "@udecode/plate-code-block": "^28.0.0",
-    "@udecode/plate-combobox": "^28.0.0",
-    "@udecode/plate-comments": "^28.0.0",
-    "@udecode/plate-common": "^28.0.0",
-    "@udecode/plate-dnd": "^28.0.0",
-    "@udecode/plate-emoji": "^28.0.0",
-    "@udecode/plate-excalidraw": "^28.0.0",
-    "@udecode/plate-floating": "^28.0.0",
-    "@udecode/plate-font": "^28.0.0",
-    "@udecode/plate-heading": "^28.0.0",
-    "@udecode/plate-highlight": "^28.0.0",
-    "@udecode/plate-horizontal-rule": "^28.0.0",
-    "@udecode/plate-indent": "^28.0.0",
-    "@udecode/plate-indent-list": "^28.0.0",
-    "@udecode/plate-juice": "^28.0.0",
-    "@udecode/plate-kbd": "^28.0.0",
-    "@udecode/plate-line-height": "^28.0.0",
-    "@udecode/plate-link": "^28.0.0",
-    "@udecode/plate-list": "^28.0.0",
-    "@udecode/plate-media": "^28.0.0",
-    "@udecode/plate-mention": "^28.0.0",
-    "@udecode/plate-node-id": "^28.0.0",
-    "@udecode/plate-normalizers": "^28.0.0",
-    "@udecode/plate-paragraph": "^28.0.0",
-    "@udecode/plate-reset-node": "^28.0.0",
-    "@udecode/plate-resizable": "^28.0.0",
-    "@udecode/plate-select": "^28.0.0",
-    "@udecode/plate-selection": "^28.0.0",
-    "@udecode/plate-serializer-csv": "^28.0.0",
-    "@udecode/plate-serializer-docx": "^28.0.0",
-    "@udecode/plate-serializer-md": "^28.0.0",
-    "@udecode/plate-tabbable": "^28.0.0",
-    "@udecode/plate-table": "^28.0.0",
-    "@udecode/plate-trailing-block": "^28.0.0",
+    "@udecode/cn": "^29.0.1",
+    "@udecode/plate-alignment": "^29.1.0",
+    "@udecode/plate-autoformat": "^29.1.0",
+    "@udecode/plate-basic-marks": "^29.1.0",
+    "@udecode/plate-block-quote": "^29.1.0",
+    "@udecode/plate-break": "^29.1.0",
+    "@udecode/plate-caption": "^29.1.0",
+    "@udecode/plate-code-block": "^29.1.0",
+    "@udecode/plate-combobox": "^29.1.0",
+    "@udecode/plate-comments": "^29.1.0",
+    "@udecode/plate-common": "^29.1.0",
+    "@udecode/plate-dnd": "^29.1.0",
+    "@udecode/plate-emoji": "^29.1.0",
+    "@udecode/plate-excalidraw": "^29.1.0",
+    "@udecode/plate-floating": "^29.1.0",
+    "@udecode/plate-font": "^29.1.0",
+    "@udecode/plate-heading": "^29.1.0",
+    "@udecode/plate-highlight": "^29.1.0",
+    "@udecode/plate-horizontal-rule": "^29.1.0",
+    "@udecode/plate-indent": "^29.1.0",
+    "@udecode/plate-indent-list": "^29.1.0",
+    "@udecode/plate-juice": "^29.1.0",
+    "@udecode/plate-kbd": "^29.1.0",
+    "@udecode/plate-line-height": "^29.1.0",
+    "@udecode/plate-link": "^29.1.0",
+    "@udecode/plate-list": "^29.1.0",
+    "@udecode/plate-media": "^29.1.0",
+    "@udecode/plate-mention": "^29.1.0",
+    "@udecode/plate-node-id": "^29.1.0",
+    "@udecode/plate-normalizers": "^29.1.0",
+    "@udecode/plate-paragraph": "^29.1.0",
+    "@udecode/plate-reset-node": "^29.1.0",
+    "@udecode/plate-resizable": "^29.1.0",
+    "@udecode/plate-select": "^29.1.0",
+    "@udecode/plate-selection": "^29.1.0",
+    "@udecode/plate-serializer-csv": "^29.1.0",
+    "@udecode/plate-serializer-docx": "^29.1.0",
+    "@udecode/plate-serializer-md": "^29.1.0",
+    "@udecode/plate-tabbable": "^29.1.0",
+    "@udecode/plate-table": "^29.1.0",
+    "@udecode/plate-trailing-block": "^29.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
