--- a/packages/database-services/package.json
+++ b/packages/database-services/package.json
@@ -36,6 +36,7 @@
     "@moaitime/shared-common": "workspace:*",
     "archiver": "^6.0.1",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "drizzle-orm": "^0.29.0",
     "uuid": "^9.0.1"
   },
