--- a/packages/web-core/package.json
+++ b/packages/web-core/package.json
@@ -45,6 +45,7 @@
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "6.20.0",
     "use-debounce": "^10.0.0",
     "usehooks-ts": "^2.9.1",
