--- a/packages/web-core/package.json
+++ b/packages/web-core/package.json
@@ -38,6 +38,7 @@
     "colord": "^2.9.3",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
+    "dompurify": "^3.0.8",
     "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.307.0",
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@moaitime/tailwind-config": "workspace:*",
+    "@types/dompurify": "^3.0.5",
     "@types/lodash": "^4.14.202",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
