--- a/packages/web-core/package.json
+++ b/packages/web-core/package.json
@@ -34,6 +34,7 @@
     "@moaitime/tsconfig-config": "workspace:*",
     "@moaitime/web-ui": "workspace:*",
     "@moaitime/web-ui-editor": "workspace:*",
+    "@tanstack/react-query": "5.17.9",
     "clsx": "^2.0.0",
     "colord": "^2.9.3",
     "date-fns": "^2.30.0",
@@ -47,7 +48,6 @@
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
-    "react-query": "^3.39.3",
     "react-router-dom": "6.20.0",
     "use-debounce": "^10.0.0",
     "usehooks-ts": "^2.9.1",
