--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "turbo build --no-daemon",
-    "clean": "turbo clean --no-daemon --parallel",
+    "clean": "turbo clean --no-daemon --parallel && pnpm dlx rimraf --glob node_modules",
     "cli": "pnpm build && cd apps/cli && pnpm run-exec",
     "database:check": "cd ./packages/database-core && pnpm scripts:check",
     "database:generate-migration": "cd ./packages/database-core && pnpm scripts:generate-migration && cd ../.. && pnpm format",
