--- a/configs/tailwind-config/package.json
+++ b/configs/tailwind-config/package.json
@@ -1,10 +1,8 @@
 {
   "name": "@moaitime/tailwind-config",
   "version": "0.0.0",
-  "dependencies": {
-    "tailwindcss-animate": "^1.0.7"
-  },
   "devDependencies": {
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
