--- a/configs/tsconfig-config/tsconfig.backend.json
+++ b/configs/tsconfig-config/tsconfig.backend.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
+    "types": ["node", "vitest/globals"],
     "preserveSymlinks": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
