--- a/packages/web-core/package.json
+++ b/packages/web-core/package.json
@@ -41,6 +41,7 @@
     "date-fns-tz": "^2.0.0",
     "dompurify": "^3.0.8",
     "framer-motion": "^10.16.4",
+    "jotai": "^2.6.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.309.0",
     "mitt": "^3.0.1",
