--- a/configs/eslint-config/package.json
+++ b/configs/eslint-config/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "main": "index.js",
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.17.20",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "eslint-config-prettier": "^9.0.0",
