Some work on tasks statistics regarding charts

--- a/packages/web-core/package.json
+++ b/packages/web-core/package.json
@@ -35,6 +35,7 @@
     "@moaitime/web-ui": "workspace:*",
     "@moaitime/web-ui-editor": "workspace:*",
     "@tanstack/react-query": "5.17.9",
+    "apexcharts": "^3.45.2",
     "clsx": "^2.0.0",
     "colord": "^2.9.3",
     "date-fns": "^2.30.0",
@@ -46,6 +47,7 @@
     "lucide-react": "^0.314.0",
     "mitt": "^3.0.1",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
