--- a/packages/web-core/package.json
+++ b/packages/web-core/package.json
@@ -52,6 +52,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "6.20.0",
+    "rrule": "^2.8.1",
     "use-debounce": "^10.0.0",
     "usehooks-ts": "^2.9.1",
     "zustand": "^4.4.6"
