--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -32,14 +32,17 @@
     "@moaitime/database-services": "workspace:*",
     "@moaitime/database-services-testing": "workspace:*",
     "@moaitime/database-testing": "workspace:*",
+    "@moaitime/logging": "workspace:*",
     "@moaitime/shared-backend": "workspace:*",
     "@moaitime/shared-common": "workspace:*",
     "@moaitime/tsconfig-config": "workspace:*",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.2.10",
+    "@nestjs/platform-ws": "^10.3.1",
     "@nestjs/schematics": "^10.0.3",
     "@nestjs/testing": "^10.2.10",
+    "@nestjs/websockets": "^10.3.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "date-fns": "^2.30.0",
@@ -48,13 +51,15 @@
     "reflect-metadata": "^0.1.13",
     "request-ip": "^3.3.0",
     "rxjs": "^7.8.0",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/express-serve-static-core": "^4.17.41",
     "@types/request-ip": "^0.0.41",
     "@types/supertest": "^2.0.16",
+    "@types/ws": "^8.5.10",
     "typescript": "^5.3.2"
   }
 }
