--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "turbo:clean": "pnpx turbo daemon clean"
   },
   "dependencies": {
+    "@nestjs/platform-express": "^10.2.10",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@moaitime/prettier-config": "workspace:*",
     "@moaitime/tsconfig-config": "workspace:*",
     "@swc/core": "^1.3.100",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.10.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "cross-env": "^7.0.3",
