File upload stuff

--- a/configs/tsconfig-config/tsconfig.base.json
+++ b/configs/tsconfig-config/tsconfig.base.json
@@ -42,6 +42,7 @@
       "@moaitime/bullmq": ["../../packages/bullmq/src/index.ts"],
       "@moaitime/redis": ["../../packages/redis/src/index.ts"],
       "@moaitime/job-runner": ["../../packages/job-runner/src/index.ts"],
+      "@moaitime/uploader": ["../../packages/uploader/src/index.ts"],
       "@moaitime/global-event-notifier": ["../../packages/global-event-notifier/src/index.ts"]
     }
   },
