--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -40,7 +40,7 @@ services:
     environment:
       - MINIO_ROOT_USER=user
       - MINIO_ROOT_PASSWORD=password
-      - MINIO_DEFAULT_BUCKETS=default
+      - MINIO_DEFAULT_BUCKETS=user-avatars,user-data-exports
     volumes:
       - minio-data:/data
     ports:
