--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -49,6 +49,7 @@
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "express": "4.18.2",
+    "gray-matter": "^4.0.3",
     "reflect-metadata": "^0.1.13",
     "request-ip": "^3.3.0",
     "rxjs": "^7.8.0",
