--- a/configs/tailwind-config/package.json
+++ b/configs/tailwind-config/package.json
@@ -4,5 +4,8 @@
   "devDependencies": {
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7"
+  },
+  "dependencies": {
+    "@tailwindcss/typography": "^0.5.10"
   }
 }
