--- a/packages/web-core/package.json
+++ b/packages/web-core/package.json
@@ -51,6 +51,7 @@
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "6.20.0",
     "use-debounce": "^10.0.0",
     "usehooks-ts": "^2.9.1",
