Adding rabbitmq stuff

--- a/.env.local.example
+++ b/.env.local.example
@@ -2,5 +2,6 @@
 # URLs
 POSTGRESQL_URL=postgresql://user:password@localhost:5432/database?schema=public
 REDIS_URL=redis://localhost:6379
+RABBITMQ_URL=amqp://localhost:5672
 USER_DATA_EXPORTS_BUCKET_URL=http://user:password@localhost:9000/user-data-exports
 USER_AVATARS_BUCKET_URL=http://user:password@localhost:9000/user-avatars
