Non-default redis credentials in url

--- a/.env
+++ b/.env
@@ -22,7 +22,7 @@ LOGGER_LEVEL=trace
 # IMPORTANT NOTE - if the username of password have special characters, YOU MUST ENCODE THEM!
 POSTGRESQL_URL=postgresql://user:password@postgres:5432/database?schema=public
 REDIS_URL=redis://redis:6379
-RABBITMQ_URL=amqp://rabbitmq:5672
+RABBITMQ_URL=amqp://user:password@rabbitmq:5672
 SMTP_URL=smtp://user:password@smtp:587
 USER_DATA_EXPORTS_BUCKET_URL=http://user:password@minio:9000/user-data-exports
 USER_AVATARS_BUCKET_URL=http://user:password@minio:9000/user-avatars
