Revert "Rename "global-events-notifier" to "global-events", as we willl also have a processor in there"
This reverts commit 6b8ffdebed1e0ca28cf8fa7c42a68fe7982de918.

--- a/configs/tsconfig-config/tsconfig.base.json
+++ b/configs/tsconfig-config/tsconfig.base.json
@@ -44,7 +44,7 @@
       "@moaitime/redis": ["../../packages/redis/src/index.ts"],
       "@moaitime/job-runner": ["../../packages/job-runner/src/index.ts"],
       "@moaitime/uploader": ["../../packages/uploader/src/index.ts"],
-      "@moaitime/global-events": ["../../packages/global-events/src/index.ts"]
+      "@moaitime/global-events-notifier": ["../../packages/global-events-notifier/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "dist"]
