Update root dependencies (turbo, vite, tsup, ...) and few smallet tweaks

--- a/packages/job-runner/package.json
+++ b/packages/job-runner/package.json
@@ -28,6 +28,7 @@
     "@moaitime/global-events-notifier": "workspace:*",
     "@moaitime/logging": "workspace:*",
     "@moaitime/processes": "workspace:*",
+    "@moaitime/rabbitmq": "workspace:*",
     "@moaitime/redis": "workspace:*",
     "@moaitime/shared-common": "workspace:*",
     "@moaitime/shared-queue-worker": "workspace:*"
