--- a/package.json
+++ b/package.json
@@ -15,35 +15,34 @@
     "format": "prettier --write --no-error-on-unmatched-pattern \"./{apps,packages}/**/*.{ts,tsx}\" \"./**/*.json\"",
     "format:check": "prettier --check --no-error-on-unmatched-pattern \"./{apps,packages}/**/*.{ts,tsx}\" \"./**/*.json\"",
     "lint": "turbo lint --no-daemon",
-    "prepare": "husky install",
+    "prepare": "husky",
     "serve": "turbo serve --no-daemon",
     "test": "cross-env NODE_ENV=test turbo test --no-daemon --concurrency=1",
     "test:watch": "cross-env NODE_ENV=test turbo test:watch --no-daemon",
     "turbo:clean": "pnpx turbo daemon clean"
   },
   "dependencies": {
-    "@nestjs/platform-express": "^10.2.10",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@moaitime/eslint-config": "workspace:*",
     "@moaitime/prettier-config": "workspace:*",
     "@moaitime/tsconfig-config": "workspace:*",
-    "@swc/core": "^1.3.100",
+    "@swc/core": "^1.4.0",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.10.2",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@types/node": "^20.11.17",
+    "@vitejs/plugin-react-swc": "^3.6.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.55.0",
-    "husky": "^8.0.0",
-    "prettier": "^3.1.0",
-    "syncpack": "^11.2.1",
-    "tsup": "^8.0.1",
-    "turbo": "^1.11.0",
-    "vite": "^5.0.4",
-    "vitest": "^0.34.6"
+    "eslint": "^8.56.0",
+    "husky": "^9.0.10",
+    "prettier": "^3.2.5",
+    "syncpack": "^12.3.0",
+    "tsup": "^8.0.2",
+    "turbo": "^1.12.3",
+    "vite": "^5.1.1",
+    "vitest": "^1.2.2"
   },
-  "packageManager": "pnpm@8.15.1",
+  "packageManager": "pnpm@8.15.2",
   "engines": {
     "node": ">=20.0.0"
   },
