--- a/turbo.json
+++ b/turbo.json
@@ -10,24 +10,26 @@
       "cache": false,
       "persistent": true
     },
-    "lint": {},
+    "lint": {
+      "dependsOn": ["^build"]
+    },
     "clean": {
       "cache": false
     },
     "serve": {
-      "dependsOn": ["build"]
+      "dependsOn": ["^build"]
     },
     "test": {
-      "dependsOn": ["build"]
+      "dependsOn": ["^build"]
     },
     "test:watch": {
       "cache": false
     },
     "e2e": {
-      "dependsOn": ["build"]
+      "dependsOn": ["^build"]
     },
     "dev:e2e": {
-      "dependsOn": ["build"],
+      "dependsOn": ["^build"],
       "cache": false
     }
   }
