Fix some test stuff

--- a/packages/database-services/package.json
+++ b/packages/database-services/package.json
@@ -21,7 +21,7 @@
     "clean": "pnpm dlx rimraf --glob node_modules --glob .turbo --glob dist",
     "dev": "tsup --watch",
     "lint": "eslint .",
-    "test": "vitest run --no-threads",
+    "test": "vitest run --fileParallelism=false",
     "types:generate": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir dist"
   },
   "dependencies": {
