Replace json with jsonb for database and a new migration for that (which caused prettier to rerun since being updated and fixing addition tsconfig json files)

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,6 +3,6 @@
   "include": ["src/**/*"],
   "compilerOptions": {
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-  },
+    "emitDecoratorMetadata": true
+  }
 }
