--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -2,6 +2,6 @@
   "extends": "@moaitime/tsconfig-config/tsconfig.frontend.json",
   "include": ["src/**/*"],
   "compilerOptions": {
-    "types": ["vite/client"],
-  },
+    "types": ["vite/client"]
+  }
 }
