Move stuff from global events notifier to global events processor + shutdown manager priority, including adding it to the redit and rabbitmq packages

--- a/packages/global-events-processor/package.json
+++ b/packages/global-events-processor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@moaitime/rabbitmq",
+  "name": "@moaitime/global-events-processor",
   "version": "0.0.0",
   "exports": {
     ".": {
@@ -24,14 +24,10 @@
     "types:generate": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir dist"
   },
   "dependencies": {
-    "@moaitime/processes": "workspace:*",
-    "@moaitime/redis": "workspace:*",
-    "@moaitime/shared-backend": "workspace:*",
-    "amqplib": "^0.10.3",
-    "superjson": "^1.13.1"
+    "@moaitime/global-events-notifier": "workspace:*",
+    "@moaitime/logging": "workspace:*"
   },
   "devDependencies": {
-    "@types/amqplib": "^0.10.1",
     "typescript": "^5.3.2"
   }
 }
