--- a/configs/tsconfig-config/tsconfig.base.json
+++ b/configs/tsconfig-config/tsconfig.base.json
@@ -44,7 +44,8 @@
       "@moaitime/redis": ["../../packages/redis/src/index.ts"],
       "@moaitime/job-runner": ["../../packages/job-runner/src/index.ts"],
       "@moaitime/uploader": ["../../packages/uploader/src/index.ts"],
-      "@moaitime/global-events-notifier": ["../../packages/global-events-notifier/src/index.ts"]
+      "@moaitime/global-events-notifier": ["../../packages/global-events-notifier/src/index.ts"],
+      "@moaitime/global-events-processor": ["../../packages/global-events-processor/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "dist"]
