More work on event publishing and stuff

--- a/packages/global-events-notifier/package.json
+++ b/packages/global-events-notifier/package.json
@@ -25,7 +25,8 @@
   },
   "dependencies": {
     "@moaitime/logging": "workspace:*",
-    "@moaitime/rabbitmq": "workspace:*"
+    "@moaitime/rabbitmq": "workspace:*",
+    "@moaitime/redis": "workspace:*"
   },
   "devDependencies": {
     "typescript": "^5.3.2"
