Move shared common files around so they make a little more sense

--- a/packages/job-runner/package.json
+++ b/packages/job-runner/package.json
@@ -28,6 +28,7 @@
     "@moaitime/global-events-processor": "workspace:*",
     "@moaitime/logging": "workspace:*",
     "@moaitime/processes": "workspace:*",
+    "@moaitime/shared-backend": "workspace:*",
     "@moaitime/shared-common": "workspace:*",
     "@moaitime/shared-queue-worker": "workspace:*"
   },
