--- a/configs/tsconfig-config/tsconfig.base.json
+++ b/configs/tsconfig-config/tsconfig.base.json
@@ -46,7 +46,10 @@
       "@moaitime/job-runner": ["../../packages/job-runner/src/index.ts"],
       "@moaitime/uploader": ["../../packages/uploader/src/index.ts"],
       "@moaitime/global-events-notifier": ["../../packages/global-events-notifier/src/index.ts"],
-      "@moaitime/global-events-processor": ["../../packages/global-events-processor/src/index.ts"]
+      "@moaitime/global-events-processor": ["../../packages/global-events-processor/src/index.ts"],
+      "@moaitime/user-experience-points-processor": [
+        "../../packages/user-experience-points-processor/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "dist"]
