--- a/packages/shared-common/tsconfig.json
+++ b/packages/shared-common/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "../user-experience-points-processor/src/UserExperiencePointsByEvent.ts"]
 }
