--- a/packages/user-notifications-processor/package.json
+++ b/packages/user-notifications-processor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@moaitime/global-events-processor",
+  "name": "@moaitime/user-notifications-processor",
   "version": "0.0.0",
   "exports": {
     ".": {
@@ -24,12 +24,9 @@
     "types:generate": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir dist"
   },
   "dependencies": {
-    "@moaitime/global-events-notifier": "workspace:*",
+    "@moaitime/database-services": "workspace:*",
     "@moaitime/logging": "workspace:*",
-    "@moaitime/shared-common": "workspace:*",
-    "@moaitime/user-achievements-processor": "workspace:*",
-    "@moaitime/user-experience-points-processor": "workspace:*",
-    "@moaitime/user-notifications-processor": "workspace:*"
+    "@moaitime/shared-common": "workspace:*"
   },
   "devDependencies": {
     "typescript": "^5.3.2"
