Update pnpm and add tslib

--- a/configs/tsconfig-config/tsconfig.base.json
+++ b/configs/tsconfig-config/tsconfig.base.json
@@ -14,6 +14,7 @@
     "strictNullChecks": true,
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
+    "importHelpers": true,
     "moduleResolution": "bundler",
     "target": "ESNext",
     "module": "ESNext",
