--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "turbo:clean": "pnpx turbo daemon clean"
   },
   "dependencies": {
+    "tslib": "^2.6.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -39,7 +40,7 @@
     "vite": "^5.1.1",
     "vitest": "^1.2.2"
   },
-  "packageManager": "pnpm@8.15.2",
+  "packageManager": "pnpm@8.15.3",
   "engines": {
     "node": ">=20.0.0"
   },
