--- a/packages/database-services/package.json
+++ b/packages/database-services/package.json
@@ -25,6 +25,7 @@
     "types:generate": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir dist"
   },
   "dependencies": {
+    "@moaitime/database-cache": "workspace:*",
     "@moaitime/database-core": "workspace:*",
     "@moaitime/database-testing": "workspace:*",
     "@moaitime/emails-mailer": "workspace:*",
