--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "build": "tsup",
     "clean": "pnpm dlx rimraf --glob node_modules --glob .turbo --glob dist",
-    "dev": "tsup --env.TSUP_WATCH=true",
+    "dev": "nest start --tsc --watch",
     "lint": "eslint .",
     "serve": "node ./dist/main.js",
     "test": "vitest run",
@@ -37,23 +37,23 @@
     "@moaitime/shared-backend": "workspace:*",
     "@moaitime/shared-common": "workspace:*",
     "@moaitime/tsconfig-config": "workspace:*",
-    "@nestjs/common": "^10.0.2",
-    "@nestjs/core": "^10.0.2",
-    "@nestjs/platform-express": "^10.2.10",
-    "@nestjs/platform-ws": "^10.3.1",
-    "@nestjs/schematics": "^10.0.3",
-    "@nestjs/testing": "^10.2.10",
-    "@nestjs/websockets": "^10.3.1",
+    "@nestjs/cli": "^10.3.2",
+    "@nestjs/common": "^10.3.3",
+    "@nestjs/core": "^10.3.3",
+    "@nestjs/platform-express": "^10.3.3",
+    "@nestjs/platform-ws": "^10.3.3",
+    "@nestjs/schematics": "^10.1.1",
+    "@nestjs/testing": "^10.3.3",
+    "@nestjs/websockets": "^10.3.3",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
+    "class-validator": "^0.14.1",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "express": "4.18.2",
     "gray-matter": "^4.0.3",
-    "reflect-metadata": "^0.1.13",
+    "reflect-metadata": "^0.1.14",
     "request-ip": "^3.3.0",
-    "rxjs": "^7.8.0",
-    "supertest": "^6.3.3",
+    "rxjs": "^7.8.1",
     "ws": "^8.16.0"
   },
   "devDependencies": {
@@ -62,6 +62,7 @@
     "@types/request-ip": "^0.0.41",
     "@types/supertest": "^2.0.16",
     "@types/ws": "^8.5.10",
+    "supertest": "^6.3.4",
     "typescript": "^5.3.2"
   }
 }
