--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "turbo build --no-daemon",
     "clean": "turbo clean --no-daemon --parallel && pnpm dlx rimraf --glob node_modules",
     "cli": "pnpm build && cd apps/cli && pnpm run-exec",
-    "dev": "cross-env NODE_ENV=development turbo dev --no-daemon --concurrency=50",
+    "dev": "cross-env NODE_ENV=development turbo dev --no-daemon --concurrency=50 --filter='./apps/*' --filter='!./apps/web-e2e'",
     "dev:e2e": "cross-env NODE_ENV=test turbo dev:e2e --no-daemon --concurrency=1",
     "e2e": "cross-env NODE_ENV=test turbo e2e --no-daemon --concurrency=1",
     "format": "prettier --write --no-error-on-unmatched-pattern \"./{apps,packages}/**/*.{ts,tsx}\" \"./**/*.json\"",
@@ -26,6 +26,7 @@
     "@moaitime/eslint-config": "workspace:*",
     "@moaitime/prettier-config": "workspace:*",
     "@moaitime/tsconfig-config": "workspace:*",
+    "@swc/cli": "^0.3.9",
     "@swc/core": "^1.4.2",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.20",
@@ -35,9 +36,11 @@
     "husky": "^9.0.11",
     "prettier": "^3.2.5",
     "syncpack": "^12.3.0",
+    "ts-loader": "^9.5.1",
     "tsup": "^8.0.2",
     "turbo": "^1.12.4",
     "vite": "^5.1.4",
+    "vite-tsconfig-paths": "^4.3.1",
     "vitest": "^1.3.1"
   },
   "packageManager": "pnpm@8.15.3",
