--- a/packages/emails-core/package.json
+++ b/packages/emails-core/package.json
@@ -20,8 +20,8 @@
     "build": "tsup",
     "clean": "pnpm dlx rimraf --glob node_modules --glob .turbo --glob dist --glob .react-email",
     "dev": "tsup --watch",
+    "dev:emails": "email dev --port 3535 --dir ./src/emails",
     "lint": "eslint .",
-    "serve": "email dev --port 3535 --dir ./src/emails",
     "types:generate": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir dist"
   },
   "dependencies": {
