--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "build": "turbo build --no-daemon",
     "clean": "turbo clean --no-daemon --parallel && pnpm dlx rimraf --glob node_modules",
     "cli": "pnpm build && cd apps/cli && pnpm run-exec",
-    "dev": "cross-env NODE_ENV=development turbo dev --no-daemon --concurrency=50 --filter='./apps/*' --filter='!./apps/web-e2e'",
+    "dev": "cross-env NODE_ENV=development turbo dev --no-daemon --concurrency=50",
     "dev:e2e": "cross-env NODE_ENV=test turbo dev:e2e --no-daemon --concurrency=1",
     "dev:emails": "cross-env NODE_ENV=development turbo dev:emails --no-daemon --concurrency=1",
-    "dev:legacy": "cross-env NODE_ENV=development turbo dev --no-daemon --concurrency=50",
+    "dev:not-working-yet": "cross-env NODE_ENV=development turbo dev --no-daemon --concurrency=50 --filter='./apps/*' --filter='!./apps/web-e2e'",
     "e2e": "cross-env NODE_ENV=test turbo e2e --no-daemon --concurrency=1",
     "format": "prettier --write --no-error-on-unmatched-pattern \"./{apps,packages}/**/*.{ts,tsx}\" \"./**/*.json\"",
     "format:check": "prettier --check --no-error-on-unmatched-pattern \"./{apps,packages}/**/*.{ts,tsx}\" \"./**/*.json\"",
