--- a/packages/web-core/package.json
+++ b/packages/web-core/package.json
@@ -29,6 +29,7 @@
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "3.2.2",
+    "@moaitime/recurrence-parser": "workspace:*",
     "@moaitime/shared-common": "workspace:*",
     "@moaitime/tsconfig-config": "workspace:*",
     "@moaitime/web-ui": "workspace:*",
