--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "scripts": {
     "build": "turbo build --no-daemon",
-    "clean": "turbo clean --no-daemon --parallel && pnpm dlx rimraf --glob node_modules",
-    "cli": "pnpm build && cd apps/cli && pnpm run-exec",
+    "clean": "turbo clean --no-daemon --parallel && rimraf --glob node_modules",
+    "cli": "cd apps/cli && pnpm dev:run-exec",
     "dev": "cross-env NODE_ENV=development turbo dev --no-daemon --concurrency=50",
     "dev:e2e": "cross-env NODE_ENV=test turbo dev:e2e --no-daemon --concurrency=1",
     "dev:emails": "cross-env NODE_ENV=development turbo dev:emails --no-daemon --concurrency=1",
-    "dev:not-working-yet": "cross-env NODE_ENV=development turbo dev --no-daemon --concurrency=50 --filter='./apps/*' --filter='!./apps/web-e2e'",
+    "dev:legacy": "cross-env NODE_ENV=development turbo dev --no-daemon --concurrency=50 --filter='./apps/*' --filter='!./apps/web-e2e'",
     "e2e": "cross-env NODE_ENV=test turbo e2e --no-daemon --concurrency=1",
     "format": "prettier --write --no-error-on-unmatched-pattern \"./{apps,packages}/**/*.{ts,tsx}\" \"./**/*.json\"",
     "format:check": "prettier --check --no-error-on-unmatched-pattern \"./{apps,packages}/**/*.{ts,tsx}\" \"./**/*.json\"",
@@ -36,6 +36,7 @@
     "eslint": "^8.57.0",
     "husky": "^9.0.11",
     "prettier": "^3.2.5",
+    "rimraf": "^5.0.5",
     "syncpack": "^12.3.0",
     "ts-loader": "^9.5.1",
     "tslib": "^2.6.2",
