--- a/apps/web-e2e/package.json
+++ b/apps/web-e2e/package.json
@@ -2,7 +2,7 @@
   "name": "@moaitime/web-e2e",
   "version": "0.0.0",
   "scripts": {
-    "clean": "pnpm dlx rimraf --glob node_modules --glob .turbo --glob dist",
+    "clean": "rimraf --glob node_modules --glob .turbo --glob dist",
     "cypress:open": "pnpm exec cypress open",
     "cypress:run": "pnpm exec cypress run",
     "dev:e2e": "start-server-and-test servers:start \":4200|:3636\" cypress:open",
