Fix on missing dependency on database seeds package

--- a/packages/database-seeds/package.json
+++ b/packages/database-seeds/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@moaitime/database-core": "workspace:*",
     "@moaitime/logging": "workspace:*",
+    "@moaitime/recurrence-parser": "workspace:*",
     "@moaitime/shared-backend": "workspace:*",
     "@moaitime/shared-common": "workspace:*",
     "drizzle-orm": "^0.29.0"
