--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,9 +19,8 @@
   "scripts": {
     "build": "tsup",
     "clean": "rimraf --glob node_modules --glob .turbo --glob dist",
-    "dev": "tsx watch ./src/main.ts",
-    "dev:legacy": "tsup --env.TSUP_WATCH=true",
-    "dev:legacy-2": "nest build --watch",
+    "dev": "tsup --env.TSUP_WATCH=true",
+    "dev:legacy": "nest build --watch",
     "lint": "eslint .",
     "serve": "node ./dist/main.js",
     "test": "vitest run",
@@ -56,7 +55,6 @@
     "reflect-metadata": "^0.1.14",
     "request-ip": "^3.3.0",
     "rxjs": "^7.8.1",
-    "tsx": "^4.7.1",
     "ws": "^8.16.0"
   },
   "devDependencies": {
