--- a/turbo.json
+++ b/turbo.json
@@ -17,7 +17,7 @@
       "cache": false
     },
     "serve": {
-      "dependsOn": ["^build"]
+      "dependsOn": ["build"]
     },
     "test": {
       "dependsOn": ["^build"]
