--- a/packages/recurrence-parser/package.json
+++ b/packages/recurrence-parser/package.json
@@ -21,6 +21,7 @@
     "clean": "rimraf --glob node_modules --glob .turbo --glob dist",
     "dev": "tsup --watch",
     "lint": "eslint .",
+    "test": "vitest run",
     "types:generate": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir dist"
   },
   "dependencies": {
