Initial work on google oauth

--- a/.env
+++ b/.env
@@ -15,6 +15,9 @@ TZ=UTC
 API_PORT=3636
 
 ########## Application ##########
+WEB_BASE_URL=http://localhost:4200
+API_BASE_URL=http://localhost:3636
+
 # Logger
 LOGGER_LEVEL=trace
 
@@ -26,3 +29,7 @@ RABBITMQ_URL=amqp://user:password@rabbitmq:5672
 SMTP_URL=smtp://user:password@smtp:587
 USER_DATA_EXPORTS_BUCKET_URL=http://user:password@minio:9000/user-data-exports
 USER_AVATARS_BUCKET_URL=http://user:password@minio:9000/user-avatars
+
+# OAuth
+OAUTH_GOOGLE_CLIENT_ID=
+OAUTH_GOOGLE_CLIENT_SECRET=
