--- a/.env.local.example
+++ b/.env.local.example
@@ -5,3 +5,7 @@ REDIS_URL=redis://localhost:6379
 RABBITMQ_URL=amqp://user:password@localhost:5672
 USER_DATA_EXPORTS_BUCKET_URL=http://user:password@localhost:9000/user-data-exports
 USER_AVATARS_BUCKET_URL=http://user:password@localhost:9000/user-avatars
+
+# OAuth
+OAUTH_GOOGLE_CLIENT_ID=
+OAUTH_GOOGLE_CLIENT_SECRET=
