--- a/packages/shared-common/tsconfig.json
+++ b/packages/shared-common/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src/**/*", "../user-experience-points-processor/src/UserExperiencePointsByEvent.ts"]
+  "include": ["src/**/*"],
+  "compilerOptions": {
+    "types": ["vite/client"]
+  }
 }
